--- a/readme.rdoc
+++ b/readme.rdoc
@@ -1,7 +1,7 @@
 <b> XCode Template for creating your own Adium Plugins </b>
 
 
-h3 Installation
+<b>Installation</b>
 
 * Make sure you have the following directory: 
   
@@ -15,14 +15,14 @@ If you do not have that directory create it and navigate to it.
   hg clone http://hg.adiumx.com/adium
 
 
-3. Make sure you have the following directory.
+* Make sure you have the following directory.
   
   /Library/Application Support/Developer/Shared/Xcode/Project Templates/Adium/Plugin
   
 If that does not exist make sure to create it.
 
 
-4. Download or clone the git repository 
+* Download or clone the git repository 
 
   git clone git://github.com/fernyb/adiumplugin.git
   
@@ -31,9 +31,9 @@ Copy all files from git repository and place them in
   /Library/Application Support/Developer/Shared/Xcode/Project Templates/Adium/Plugin
   
   
-5. Launch XCode and create new project. On the left side under User Templates you should have a new entry for selecting Adium and selecting Plugin to create.
+* Launch XCode and create new project. On the left side under User Templates you should have a new entry for selecting Adium and selecting Plugin to create.
 
 
-6. That is it. 
+* That is it. 
 
 
